0.8.0 - currently working on
- [#4242] Feature: Add an interface for Map points
- [#4244] Fix: Change the geocoding throttling to allow only 2500 requests per day
- [#4245] Feature: Add List::toArray
- [#4238] Feature: Add an interface for Geocoding
- [#4239] Feature: Update the Google geocoding to V3
- [#4237] Cleanup: Use the new class names for the Geocoding classes
- [#4195] Fix: Fix crash in TYPO3 4.6 by calling parent::__construct instead of the old PHP4 style constructors
- [#4154] Feature: Add List::inRange
- [#4169] Fix: Drop unused code and some unused variables
- [#4168] Feature: Add Model_FrontEndUser::setName
- [#4167] Feature: Add Mapper_FrontEndUser::findByUserName
- [#4161] Feature: Add some getters and setters to the FE user model
- [#4160] Feature: Add Model_FrontEndUser::getJobTitle and ::hasJobTitle
- [#2628] Feature: Add a function frontEndLoginManager::loginUser
- [#4132] Feature: Add a class with time constants
- [#4129] Fix: Decimals of geo coordinates are cut off in the DB
- [#3248] Fix: A model without UID should automatically be dirty after setData
- [#4111] Fix: tx_oelib_List::sort needs to make the list dirty
- [#4095] Fix: Wrong documentation comment for tx_oelib_ConfigurationRegistry::get
- [#4125] Fix: Check all class_exists for the correct use of the autoload flag
- [#4128] Change: Improve the exception text about missing subparts
- [#4121] Feature: Add a function Geocoding_Calculator::filterByDistance
- [#4047] Cleanup: Rename all test classes from *_testcase to *Test
- [#4094] Fix: Use empty configurations in the unit tests
- [#4080] Fix: Memory-only models must not try to load IRRE relations from database
- [#4056] Feature: Add List::at
- [#4055] Feature: Add a Sortable interface
- [#4030] Feature: Add a function for calculating the distance between two geo objects
- [#4053] Feature: Add Model::setPageUid
- [#2049] Cleanup: Drop our copy of t3lib_div::rmdir