@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4256] Cleanup: Change "EMailAddress" to "EmailAddress" in all function and method names so they are true CamelCase
 - [#4242] Feature: Add an interface for Map points
 - [#4244] Fix: Change the geocoding throttling to allow only 2500 requests per day
 - [#4245] Feature: Add List::toArray
